# chatRoom

./: .gitignore  CMakeLists.txt  charRoom_prd.md
chatRoomClient/: CMakeLists.txt
chatRoomClient/include/: client.h  log.h
chatRoomClient/src/: client.cpp  log.cpp  main.cpp
chatRoomServer/: CMakeLists.txt
chatRoomServer/include/: server.h  threadPool.h
chatRoomServer/src/: log.cpp  main.cpp  protocol.cpp  server.cpp  threadPool.cpp
client/: CMakeLists.txt
client/include/: client.h
client/src/: client.cpp  main.cpp
common/: CMakeLists.txt
common/include/common/: messageTransporter.h  protocol.h  safe.h  threadPool.h
common/src/: log.cpp  messageTransporter.cpp  protocol.cpp  safe.cpp  threadPool.cpp
docs/: protocol.md
server/: CMakeLists.txt
server/include/: server.h
server/src/: main.cpp  server.cpp
tools/: find.sh
tools/include/: messageTransporter.h  protocol.h  safe.h
tools/src/: log.cpp  messageTransporter.cpp  protocol.cpp  safe.cpp
